--- a/css/ok.css
+++ b/css/ok.css
@@ -50,6 +50,7 @@ a {
     padding: 130px 0 200px 0;
 }
 .main-text-border {
+    position: relative;
     width: 70%;
     margin: 0 auto;
     padding: 18px 4px;
@@ -59,6 +60,7 @@ a {
     text-align: center;
     border: 2px solid #ffffff;
     margin-bottom: 30px;
+    box-sizing: border-box;
 
 }
 .main-email {
