--- a/css/ok.css
+++ b/css/ok.css
@@ -137,6 +137,11 @@ a {
     width: 45%;
     margin-bottom: 40px;
 }
+.ok-content-list__item-link {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
 .ok-content-list__number {
     margin-right: 20px;
 }
@@ -158,6 +163,7 @@ a {
     line-height: 1.2;
     font-size: 18px;
     font-family: 'Futura PT Book';
+    color: #000;
 }
 .ok-content-list__img {
     display: block;
@@ -219,6 +225,42 @@ a {
 }
 .ok-content-btn span {
     font-size: 56px;
+}
+.footer-link {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0;
+    width: 70%;
+    margin: 0 auto;
+    color: #3d3e51;
+    font-family: 'Futura PT Demi';
+    list-style-type: none;
+}
+.footer-link__item {
+    display: block;
+    font-size: 14px;
+    text-decoration: none;
+    text-align: center;
+    color: #000;
+    margin-bottom: 40px;
+    padding: 0 25px;
+}
+.footer-text {
+    width: 70%;
+    font-size: 14px;
+    text-align: center;
+    line-height: 1.6;
+    margin: 0 auto;
+    margin-bottom: 114px;
+    font-weight: normal;
+    font-style: normal;
+}
+.footer-text span {
+    font-family: 'Futura PT';
+    font-style: normal;
+    background-color: #fefc3b;
+    padding: 4px 8px;
 }
 
 @media (max-width: 1190px) {
